--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coca</title>
   </head>
-  <body>
+  <body class="body">
+    <div class="container">
+      <h1 class="heading-h1">Hello world</h1>
+    </div>
     <script type="module" src="/js/main.js"></script>
   </body>
 </html>
