--- a/src/contact.html
+++ b/src/contact.html
@@ -2,10 +2,13 @@
 <html lang="en">
   <load src="./html/base/head.html" title="Contact" />
   <body class="body" data-theme="light">
+    <script src="https://api-maps.yandex.ru/v3/?apikey=72d54e9f-b77c-45ee-a220-1e2be7eedfc7&lang=ru_RU"></script>
+
     <load src="./html/components/header.html"  title="Contact"/>
 
     <load src="./html/components/contact/hero.html" />
     <load src="./html/components/partners.html" />
+    <load src="./html/components/contact/getStarted.html" />
 
     <load src="./html/components/footer.html" />
     <script type="module" src="/js/contact.js"></script>
