--- a/src/about.html
+++ b/src/about.html
@@ -6,6 +6,8 @@
     <load src="./html/components/header.html"  title="About"/>
 
     <load src="./html/components/about/hero.html" />
+    <load src="./html/components/about/powerful.html" />
+    <load src="./html/components/about/team.html" />
 
     <load src="./html/components/footer.html" />
     <script type="module" src="/js/about.js"></script>
